welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:31: error: class Array takes type parameters
def faireLigneCouleurs(T:Array){
                         ^Array1:31: error: class Array takes type parameters
def faireLigneCouleurs(T:Array){
                         ^